# squashfs_reader

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: unpack.rs
src/: decompression.rs  lib.rs  lzo.rs  metadata.rs  readers.rs  structs.rs
