[package]
name = "squashfs_reader"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["Macdu <Macdu@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Macdu/squashfs_reader"
description = "Fully featured rust reader for the squashfs archive format"
rust-version = "1.85"
keywords = ["squashfs", "filesystem", "archive"]
categories = ["filesystem", "compression"]

[dependencies]
bitflags = "2.9.0"
quick_cache = "0.6.13"
zerocopy = { version = "0.8.24", features = ["derive", "std"] }
flate2 = {version = "1.1.1", features = ["zlib-rs"] }
liblzma = { version = "0.4.1", optional = true }
lzma-rs = { version = "0.3.0", optional = true }
lz4_flex = {version = "0.11.3", default-features = false, features = ["std"]}
zstd-safe = {version = "7.2.4", features = ["std"], optional = true }
ruzstd = { version = "0.8.1", optional = true, default-features = false, features = ["std"]}

[features]
any_impl = []
best_performance = ["any_impl", "liblzma", "zstd-safe"]
only_rust = ["any_impl", "ruzstd", "lzma-rs"]
default = ["best_performance"]
